added: draw map service with also methods to draw states, state names and twits.
updated: some services working